--- a/gitea.yml
+++ b/gitea.yml
@@ -8,6 +8,8 @@
   roles:
     - role: tychobrouwer.ssh
 
+    - role: tychobrouwer.git
+
     - role: tychobrouwer.gitea
       gitea_app_name: "Gitea | Tycho Brouwer"
 
