--- a/inventory.yml
+++ b/inventory.yml
@@ -4,7 +4,7 @@ all:
     proxmox:
       ansible_host: 192.168.1.100
   children:
-    infrastructure:
+    containers:
       hosts:
         pi_hole:
           ansible_host: 192.168.1.101
@@ -26,8 +26,6 @@ all:
           ansible_host: 192.168.1.109
         libre_photos:
           ansible_host: 192.168.1.110
-    entertainment:
-      hosts:
         jellyfin:
           ansible_host: 192.168.1.111
         factorio:
@@ -36,9 +34,5 @@ all:
           ansible_host: 192.168.1.113
         ark_survival:
           ansible_host: 192.168.1.114
-    projects:
-      hosts:
-        accontroller:
-          ansible_host: 192.168.1.121
   vars:
     ansible_user: root
