update media-manager playbook with changes to group ownership

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 INVENTORY = inventory.yml
 DEFAULT_REMOTE_USER = root
-DEFAULT_VAULT_PASSWORD_FILE = ./.vault_pass.txt
+DEFAULT_VAULT_PASSWORD_FILE = .vault_pass.txt
 DEFAULT_REMOTE_PORT = 22
