fix file path journald config + portainer playbook

--- a/factorio.yml
+++ b/factorio.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Gitea
+- name: Install Factorio server
   hosts: factorio
 
   vars_files:
@@ -15,7 +15,7 @@
   tasks:
     - name: Set journald log size
       ansible.builtin.lineinfile:
-        path: /etc/subuid
+        path: /etc/systemd/journald.conf
         line: SystemMaxUse=512M
         regexp: ^SystemMaxUse=
         insertafter: "[Journal]"
