--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -12,6 +12,7 @@ roles:
   - name: tychobrouwer.lxc_nvidia
   - name: tychobrouwer.lxc_start
   - name: tychobrouwer.minecraft
+  - name: tychobrouwer.nordvpn
   - name: tychobrouwer.pbs
   - name: tychobrouwer.pihole
   - name: tychobrouwer.portainer
