--- a/inventory.yml
+++ b/inventory.yml
@@ -1,30 +1,30 @@
 ---
 all:
   hosts:
-    proxmox:
+    pve:
       ansible_host: 192.168.1.100
   children:
-    containers:
+    proxmox_all_lxc:
       hosts:
-        pi_hole:
+        pi-hole:
           ansible_host: 192.168.1.101
         wireguard:
           ansible_host: 192.168.1.102
         portainer:
           ansible_host: 192.168.1.103
-        smb_share:
+        smb-share:
           ansible_host: 192.168.1.104
         torrent:
           ansible_host: 192.168.1.105
         website:
           ansible_host: 192.168.1.106
-        media_manager:
+        media-manager:
           ansible_host: 192.168.1.107
-        backup_server:
+        backup-server:
           ansible_host: 192.168.1.108
         gitea:
           ansible_host: 192.168.1.109
-        libre_photos:
+        libre-photos:
           ansible_host: 192.168.1.110
         jellyfin:
           ansible_host: 192.168.1.111
@@ -32,7 +32,7 @@ all:
           ansible_host: 192.168.1.112
         minecraft:
           ansible_host: 192.168.1.113
-        ark_survival:
+        ark-survival:
           ansible_host: 192.168.1.114
   vars:
     ansible_user: root
