--- a/inventory.proxmox.yml
+++ b/inventory.proxmox.yml
@@ -16,3 +16,7 @@ want_proxmox_nodes_ansible_host: false
 want_facts: true
 compose:
   ansible_host: proxmox_ipconfig0.ip | default(proxmox_net0.ip) 
+
+groups:
+  debian: "proxmox_ostype == 'debian'"
+  centos: "proxmox_ostype == 'centos'"
