--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,5 @@ INVENTORY = inventory.yml
 DEFAULT_REMOTE_USER = root
 DEFAULT_VAULT_PASSWORD_FILE = .vault_pass.txt
 DEFAULT_REMOTE_PORT = 22
+FORKS = 10
+PIPELINING = True
