fix private-vars.yml path

--- a/inventory.proxmox.yml
+++ b/inventory.proxmox.yml
@@ -15,7 +15,7 @@ want_proxmox_nodes_ansible_host: false
 
 want_facts: true
 compose:
-  ansible_host: proxmox_ipconfig0.ip | default(proxmox_net0.ip)
+  ansible_host: proxmox_ipconfig0.ip | default(proxmox_net0.ip) | regex_replace('/.*', '')
   ansible_user: "'root'"
 
 groups:
