fix working inventory proxmox, pihole, and torrent

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-INVENTORY = inventory.proxmox.yml
+INVENTORY = inventories/
 DEFAULT_REMOTE_USER = root
 VAULT_PASSWORD_FILE = .vault_pass.txt
 DEFAULT_REMOTE_PORT = 22
