--- a/proxmox.yml
+++ b/proxmox.yml
@@ -11,17 +11,17 @@
 
     - role: tychobrouwer.git
 
-    - role: tychobrouwer.proxmox
-      proxmox_pbs_client:
-        directories:
-          - file-share.pxar:/media/file-share
-          - lxc-config.pxar:/etc/pve/lxc
-      proxmox_pbs_repository: backup@pbs@192.168.1.108:main
+    # - role: tychobrouwer.proxmox
+    #   proxmox_pbs_client:
+    #     directories:
+    #       - file-share.pxar:/media/file-share
+    #       - lxc-config.pxar:/etc/pve/lxc
+    #   proxmox_pbs_repository: backup@pbs@192.168.1.108:main
 
-    - role: tychobrouwer.lxc_nvidia
-      lxc_nvidia_lxc_id: 111
-      lxc_nvidia_is_host: true
-      lxc_nvidia_version: 535.154.05
+    # - role: tychobrouwer.lxc_nvidia
+    #   lxc_nvidia_lxc_id: 111
+    #   lxc_nvidia_is_host: true
+    #   lxc_nvidia_version: 535.154.05
 
     - role: tychobrouwer.lxc_mount
       lxc_mount_is_lxc: false
@@ -40,38 +40,36 @@
         - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
       lxc_mount_lxc_id: 105
 
-    - role: tychobrouwer.lxc_mount
-      lxc_mount_is_lxc: false
-      lxc_mount_mounts:
-        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
-        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
-        - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
-      lxc_mount_lxc_id: 107
+    # - role: tychobrouwer.lxc_mount
+    #   lxc_mount_is_lxc: false
+    #   lxc_mount_mounts:
+    #     - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+    #     - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+    #     - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
+    #   lxc_mount_lxc_id: 107
 
-    - role: tychobrouwer.lxc_mount
-      lxc_mount_is_lxc: false
-      lxc_mount_mounts:
-        - { src: /mnt/data2/pbs-dumps, dest: /mnt/pbs-dumps }
-        - { src: /mnt/data2/backups, dest: /mnt/backups }
-      lxc_mount_lxc_id: 108
+    # - role: tychobrouwer.lxc_mount
+    #   lxc_mount_is_lxc: false
+    #   lxc_mount_mounts:
+    #     - { src: /mnt/data2/pbs-dumps, dest: /mnt/pbs-dumps }
+    #     - { src: /mnt/data2/backups, dest: /mnt/backups }
+    #   lxc_mount_lxc_id: 108
 
-    - role: tychobrouwer.lxc_mount
-      lxc_mount_is_lxc: false
-      lxc_mount_mounts:
-        - { src: /media/file-share, dest: /share/file-share }
-        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
-        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
-        - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
-      lxc_mount_lxc_id: 111
+    # - role: tychobrouwer.lxc_mount
+    #   lxc_mount_is_lxc: false
+    #   lxc_mount_mounts:
+    #     - { src: /media/file-share, dest: /share/file-share }
+    #     - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+    #     - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+    #     - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
+    #   lxc_mount_lxc_id: 111
 
   tasks:
     - name: Add configs for VPN in lxc
-      ansible.builtin.blockinfile:
-        block: |
-          lxc.cgroup2.devices.allow: c 10:200 rwm
-          lxc.mount.entry: /dev/net dev/net none bind,create=dir
-        path: /etc/pve/lxc/{{ item }}.conf
-        marker: "# {mark} ANSIBLE MANAGED BLOCK vpn"
-        insertafter: "EOF"
+      ansible.builtin.lineinfile:
+        path: /etc/pve/lxc/105.conf
+        line: "{{ item }}"
+        regexp: "^{{ item }}"
       with_items:
-        - 105
+        - "lxc.cgroup2.devices.allow: c 10:200 rwm"
+        - "lxc.mount.entry: /dev/net dev/net none bind,create=dir"
