--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
-INVENTORY = inventories/
+INVENTORY = inventory.yml
 DEFAULT_REMOTE_USER = root
-VAULT_PASSWORD_FILE = .vault_pass.txt
+DEFAULT_VAULT_PASSWORD_FILE = .vault_pass.txt
 DEFAULT_REMOTE_PORT = 22
 FORKS = 10
 PIPELINING = True
