--- a/proxmox.yml
+++ b/proxmox.yml
@@ -4,24 +4,24 @@
 
   vars_files:
     - vars.yml
-    - private-vars.yml
+    - private_vars.yml
 
   roles:
     - role: tychobrouwer.ssh
 
     - role: tychobrouwer.git
 
-    # - role: tychobrouwer.proxmox
-    #   proxmox_pbs_client:
-    #     directories:
-    #       - file-share.pxar:/media/file-share
-    #       - lxc-config.pxar:/etc/pve/lxc
-    #   proxmox_pbs_repository: backup@pbs@192.168.1.108:main
+    - role: tychobrouwer.proxmox
+      proxmox_pbs_client:
+        directories:
+          - file-share.pxar:/media/file-share
+          - lxc-config.pxar:/etc/pve/lxc
+      proxmox_pbs_repository: backup@pbs@192.168.1.108:main
 
-    # - role: tychobrouwer.lxc_nvidia
-    #   lxc_nvidia_lxc_id: 111
-    #   lxc_nvidia_is_host: true
-    #   lxc_nvidia_version: 535.154.05
+    - role: tychobrouwer.lxc_nvidia
+      lxc_nvidia_lxc_id: 111
+      lxc_nvidia_is_host: true
+      lxc_nvidia_version: 535.154.05
 
     - role: tychobrouwer.lxc_mount
       lxc_mount_is_lxc: false
@@ -40,36 +40,26 @@
         - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
       lxc_mount_lxc_id: 105
 
-    # - role: tychobrouwer.lxc_mount
-    #   lxc_mount_is_lxc: false
-    #   lxc_mount_mounts:
-    #     - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
-    #     - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
-    #     - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
-    #   lxc_mount_lxc_id: 107
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+        - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
+      lxc_mount_lxc_id: 107
 
-    # - role: tychobrouwer.lxc_mount
-    #   lxc_mount_is_lxc: false
-    #   lxc_mount_mounts:
-    #     - { src: /mnt/data2/pbs-dumps, dest: /mnt/pbs-dumps }
-    #     - { src: /mnt/data2/backups, dest: /mnt/backups }
-    #   lxc_mount_lxc_id: 108
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /mnt/data2/pbs-dumps, dest: /mnt/pbs-dumps }
+        - { src: /mnt/data2/backups, dest: /mnt/backups }
+      lxc_mount_lxc_id: 108
 
-    # - role: tychobrouwer.lxc_mount
-    #   lxc_mount_is_lxc: false
-    #   lxc_mount_mounts:
-    #     - { src: /media/file-share, dest: /share/file-share }
-    #     - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
-    #     - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
-    #     - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
-    #   lxc_mount_lxc_id: 111
-
-  tasks:
-    - name: Add configs for VPN in lxc
-      ansible.builtin.lineinfile:
-        path: /etc/pve/lxc/105.conf
-        line: "{{ item }}"
-        regexp: "^{{ item }}"
-      with_items:
-        - "lxc.cgroup2.devices.allow: c 10:200 rwm"
-        - "lxc.mount.entry: /dev/net dev/net none bind,create=dir"
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /media/file-share, dest: /share/file-share }
+        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+        - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
+      lxc_mount_lxc_id: 111
