--- a/torrent.yml
+++ b/torrent.yml
@@ -4,7 +4,7 @@
 
   vars_files:
     - vars.yml
-    - private-vars.yml
+    - private_vars.yml
 
   roles:
     - role: tychobrouwer.ssh
@@ -14,7 +14,6 @@
 
     - role: tychobrouwer.qbittorrent_nox
       qbittorrent_nox_user_name: qbittorrent
-      qbittorrent_nox_torrent_path: /share/media-share/Torrents
 
     - role: tychobrouwer.lxc_mount
       lxc_mount_is_lxc: true
