--- a/portainer.yml
+++ b/portainer.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Portainer
-  hosts: portainer
+  hosts: portainer-2
 
   vars_files:
     - vars.yml
@@ -9,27 +9,36 @@
   roles:
     - role: tychobrouwer.ssh
 
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: true
+      lxc_mount_mounts:
+        - { src: /share/docker_volumes, dest: /var/lib/docker/volumes }
+      lxc_mount_lxc_id: 132
+      lxc_mount_user_uid: 0
+      lxc_mount_user_gid: 0
+      lxc_mount_user_name: root
+      lxc_mount_user_group: root
+      lxc_mount_permissions: 0701
+
     - role: tychobrouwer.portainer
-      portainer_root_domain: tbrouwer.com
-      portainer_traefik:
-        additional_volumes:
-          - /root/cert-proxmox.crt:/root/cert-proxmox.crt:ro
-          - /root/tbrouwer-cloudflare-origin.cert:/root/tbrouwer-cloudflare-origin.cert:ro
-          - /root/tbrouwer-cloudflare-origin.key:/root/tbrouwer-cloudflare-origin.key:ro
+      portainer_root_domain: tbrouwer.com        
       portainer_dashy:
         description: "Dashboard | Tycho Brouwer"
-      portainer_authelia:
+      portainer_authelia_user:
         user_name: tycho
         display_name: Tycho Brouwer
-      portainer_grafana:
-        admin_user: admin
+      portainer_grafana_admin_user: admin
       portainer_passbolt:
         description: Passbolt | Tycho Brouwer
         user_surname: brouwer
         user_name: tycho
-      portainer_authelia_config_template_path: templates/authelia-config.yaml.j2
-      portainer_dashy_config_template_path: templates/dashy-conf.yaml.j2
-      portainer_traefik_dynamic_template_path: templates/traefik-dynamic.yaml.j2
+      portainer_traefik_additional_volumes:
+        - /root/cert-proxmox.crt:/root/cert-proxmox.crt:ro
+        - /root/tbrouwer-cloudflare-origin.cert:/root/tbrouwer-cloudflare-origin.cert:ro
+        - /root/tbrouwer-cloudflare-origin.key:/root/tbrouwer-cloudflare-origin.key:ro
+      portainer_authelia_config_template: "{{ lookup('file', 'templates/authelia-config.yml.j2') }}"
+      portainer_dashy_config_template: "{{ lookup('file', 'templates/dashy-conf.yml.j2') }}"
+      portainer_traefik_dynamic_template: "{{ lookup('file', 'templates/traefik-dynamic.yml.j2') }}"
 
   tasks:
     - name: Set journald log size
