add books to samba

--- a/samba.yml
+++ b/samba.yml
@@ -36,6 +36,7 @@
         - { src: /rpool-main/media-share, dest: /share/media-share }
         - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
         - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+        - { src: /rpool-main/media-share/Books, dest: /share/media-share/Books }
         - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
         - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
       lxc_mount_lxc_id: 104
