fix portfolio redirects + fix www-redirect

--- a/portfolio.yml
+++ b/portfolio.yml
@@ -20,12 +20,13 @@
           url.rewrite-once = (
             "^/(dist|images|api)/(.*)$" =>      "/$1/$2",
             "^/robots.txt$"             =>      "/robots.txt",
+            "^/(projects)$"             =>      "/index.html",
             ".*"                        =>      "/"
           )
-        - |
-          url.redirect = (
-            "^/(projects)$"             =>      "/index.html"
-          )
+        # - |
+        #   url.redirect = (
+        #     "^/(projects)$"             =>      "/index.html"
+        #   )
 
   tasks:
     - name: Set journald log size
