--- a/inventories/inventory.yml
+++ b/inventories/inventory.yml
@@ -3,6 +3,8 @@ all:
   hosts:
     pve:
       ansible_host: 192.168.1.100
+    laptop:
+      ansible_host: 192.168.1.50
   vars:
     ansible_user: root
     ansible_port: 22
