--- a/inventories/inventory.yml
+++ b/inventories/inventory.yml
@@ -5,6 +5,8 @@ all:
       ansible_host: 192.168.1.100
     laptop:
       ansible_host: 192.168.1.50
+    docker:
+      ansible_host: 192.168.1.200
   vars:
     ansible_user: root
     ansible_port: 22
