--- a/jellyfin.yml
+++ b/jellyfin.yml
@@ -24,7 +24,7 @@
     - role: tychobrouwer.lxc_nvidia
       lxc_nvidia_lxc_id: 111
       lxc_nvidia_is_host: false
-      lxc_nvidia_version: 535.154.05
+      lxc_nvidia_version: "550.67"
 
   tasks:
     - name: Set journald log size
