--- a/inventories/inventory.proxmox.yml
+++ b/inventories/inventory.proxmox.yml
@@ -17,6 +17,7 @@ want_facts: true
 compose:
   ansible_host: proxmox_ipconfig0.ip | default(proxmox_net0.ip) | split("/") | first
   ansible_user: "'root'"
+  ansible_python_interpreter: /usr/bin/python3
 
 groups:
   debian: "proxmox_ostype == 'debian'"
