--- a/jellyfin.yml
+++ b/jellyfin.yml
@@ -1,4 +1,26 @@
 ---
+- name: Apply Proxmox config
+  hosts: pve
+
+  vars_files:
+    - vars.yml
+    - private-vars.yml
+
+  roles:
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /media/file-share, dest: /share/file-share }
+        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+        - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
+      lxc_mount_lxc_id: 108
+
+    - role: tychobrouwer.lxc_nvidia
+      lxc_nvidia_lxc_id: 108
+      lxc_nvidia_is_host: true
+      lxc_nvidia_version: "550.67"
+
 - name: Install Jellyfin
   hosts: jellyfin
 
@@ -18,11 +40,11 @@
         - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
         - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
         - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
-      lxc_mount_lxc_id: 111
+      lxc_mount_lxc_id: 108
       lxc_mount_users: [jellyfin]
 
     - role: tychobrouwer.lxc_nvidia
-      lxc_nvidia_lxc_id: 111
+      lxc_nvidia_lxc_id: 108
       lxc_nvidia_is_host: false
       lxc_nvidia_version: "550.67"
 
