--- a/samba.yml
+++ b/samba.yml
@@ -1,4 +1,24 @@
 ---
+- name: Apply Proxmox config
+  hosts: pve
+
+  vars_files:
+    - vars.yml
+    - private-vars.yml
+
+  roles:
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /media/file-share, dest: /share/file-share }
+        - { src: /rpool-main/media-share, dest: /share/media-share }
+        - { src: /rpool-main/media-share/Movies, dest: /share/media-share/Movies }
+        - { src: /rpool-main/media-share/Series, dest: /share/media-share/Series }
+        - { src: /rpool-main/media-share/Books, dest: /share/media-share/Books }
+        - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
+        - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
+      lxc_mount_lxc_id: 103
+
 - name: Install Samba
   hosts: samba
 
@@ -39,7 +59,7 @@
         - { src: /rpool-main/media-share/Books, dest: /share/media-share/Books }
         - { src: /rpool-main/media-share/Torrents, dest: /share/media-share/Torrents }
         - { src: /rpool-main/media-share/Transcodes, dest: /share/media-share/Transcodes }
-      lxc_mount_lxc_id: 104
+      lxc_mount_lxc_id: 103
       lxc_mount_users: [sambauser]
 
   tasks:
