--- a/minecraft.yml
+++ b/minecraft.yml
@@ -10,8 +10,11 @@
     - role: tychobrouwer.ssh
 
     - role: tychobrouwer.minecraft
-      minecraft_spigot_version: 1.20.4
-      minecraft_java_version: 17
+      minecraft_paper_version: 1.20.6
+      minecraft_paper_build: 145
+      minecraft_java_package: java-21-amazon-corretto-jdk
+      minecraft_level_name: world
+      minecraft_properties_template: "{{ lookup('file', 'templates/server.properties.j2') }}"
 
   tasks:
     - name: Set journald log size
