--- a/docker.yml
+++ b/docker.yml
@@ -28,6 +28,7 @@
       portainer_authelia_config_template: "{{ lookup('file', 'templates/authelia-config.yml.j2') }}"
       portainer_dashy_config_template: "{{ lookup('file', 'templates/dashy-conf.yml.j2') }}"
       portainer_traefik_dynamic_template: "{{ lookup('file', 'templates/traefik-dynamic.yml.j2') }}"
+      portainer_traefik_static_template: "{{ lookup('file', 'templates/traefik-static.yml.j2') }}"
 
   tasks:
     - name: Set journald log size
