--- a/matlab.yml
+++ b/matlab.yml
@@ -14,6 +14,7 @@
       matlab_release: R2024b
       matlab_install_location: /opt/matlab/{{ matlab_release }}
       matlab_user: matlab
+      matlab_input_file: templates/matlab-input.txt
 
   tasks:
     - name: Set journald log size
