--- a/matlab.yml
+++ b/matlab.yml
@@ -11,8 +11,7 @@
     - role: tychobrouwer.ssh
 
     - role: tychobrouwer.matlab
-      matlab_release: R2024b
-      matlab_install_location: /opt/matlab/{{ matlab_release }}
+      matlab_install_location: /opt/matlab/R2024b
       matlab_user: matlab
       matlab_input_file: templates/matlab-input.txt
 
