pretty print ansible output + matlab products to install

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,6 @@ REMOTE_PORT = 22
 VAULT_PASSWORD_FILE = .vault_pass.txt
 FORKS = 10
 PIPELINING = True
+stdout_callback = yaml
+result_format = yaml
+pretty_results = true
