--- a/matlab.yml
+++ b/matlab.yml
@@ -1,4 +1,18 @@
 ---
+- name: Apply Proxmox config
+  hosts: pve
+
+  vars_files:
+    - vars.yml
+    - private-vars.yml
+
+  roles:
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: false
+      lxc_mount_mounts:
+        - { src: /media/file-share/TUEindhoven, dest: /home/matlab/file-share }
+      lxc_mount_lxc_id: 114
+
 - name: Install MATLAB
   hosts:
     - matlab
@@ -14,6 +28,14 @@
       matlab_install_location: /opt/matlab/R2024b
       matlab_user: matlab
       matlab_input_file: templates/matlab-input.txt
+      matlab_release: R2024b
+
+    - role: tychobrouwer.lxc_mount
+      lxc_mount_is_lxc: true
+      lxc_mount_mounts:
+        - { src: /media/file-share/TUEindhoven, dest: /home/matlab/file-share }
+      lxc_mount_lxc_id: 114
+      lxc_mount_users: [matlab]
 
   tasks:
     - name: Set journald log size
