--- a/matlab.yml
+++ b/matlab.yml
@@ -28,6 +28,7 @@
       matlab_install_location: /opt/matlab/R2024b
       matlab_user: matlab
       matlab_input_file: templates/matlab-input.txt
+      matlab_working_directory: /home/matlab/Documents
       matlab_release: R2024b
 
     - role: tychobrouwer.lxc_mount
