--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -23,6 +23,7 @@ roles:
   - name: tychobrouwer.samba
   - name: tychobrouwer.ssh
   - name: tychobrouwer.stirlingpdf
+  - name: tychobrouwer.traefik
   - name: tychobrouwer.upgrade_packages
   - name: tychobrouwer.wiki_js
   - name: tychobrouwer.wireguard
